src/test/ui/parser/keyword-as-as-identifier.stderr
error: expected pattern, found keyword `as`
  --> $DIR/keyword-as-as-identifier.rs:6:9
   |
LL |     let as = "foo"; //~ error: expected pattern, found keyword `as`
   |         ^^ expected pattern

error: aborting due to previous error

