src/test/ui/parser/keyword-as-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py as'

fn main() {
    let as = "foo"; //~ error: expected pattern, found keyword `as`
}
